samples/_failures_safe/1761347116_ca00c2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c749660e.c: In function ‘main’:
./samples/SAFE/__tmp_c749660e.c:168:47: error: ‘MAX’ undeclared (first use in this function)
  168 |     int token_count = tokenize(input, tokens, MAX
      |                                               ^~~
./samples/SAFE/__tmp_c749660e.c:168:47: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_c749660e.c:168:50: error: expected ‘)’ at end of input
  168 |     int token_count = tokenize(input, tokens, MAX
      |                               ~                  ^
      |                                                  )
./samples/SAFE/__tmp_c749660e.c:168:5: error: expected declaration or statement at end of input
  168 |     int token_count = tokenize(input, tokens, MAX
      |     ^~~
